kubernetes/trabajos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: trabajos
  name: trabajos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: trabajos
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/taller_api: "true"
        io.kompose.service: trabajos
    spec:
      containers:
        - image: eloz/grupo8facturas:latest
          name: trabajos
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
