kubernetes/vehiculos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos
  name: vehiculos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vehiculos
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/taller_api: "true"
        io.kompose.service: vehiculos
    spec:
      containers:
        - image: esteban23/gestionvehiculosaos:v1
          name: vehiculos
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
