kubernetes/clientes-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: clientes
  name: clientes
spec:
  ports:
    - name: "82"
      port: 82
      targetPort: 80
  selector:
    io.kompose.service: clientes
status:
  loadBalancer: {}
