kubernetes/logs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: logs
  name: logs
spec:
  ports:
    - name: "86"
      port: 86
      targetPort: 80
  selector:
    io.kompose.service: logs
status:
  loadBalancer: {}
