kubernetes/notificaciones-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: notificaciones
  name: notificaciones
spec:
  ports:
    - name: "85"
      port: 85
      targetPort: 80
  selector:
    io.kompose.service: notificaciones
status:
  loadBalancer: {}
