kubernetes/recambios-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: recambios
  name: recambios
spec:
  ports:
    - name: "87"
      port: 87
      targetPort: 4010
  selector:
    io.kompose.service: recambios
status:
  loadBalancer: {}
