kubernetes/trabajos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: trabajos
  name: trabajos
spec:
  ports:
    - name: "84"
      port: 84
      targetPort: 80
  selector:
    io.kompose.service: trabajos
status:
  loadBalancer: {}
