kubernetes/vehiculos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f Taller/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos
  name: vehiculos
spec:
  ports:
    - name: "83"
      port: 83
      targetPort: 5000
  selector:
    io.kompose.service: vehiculos
status:
  loadBalancer: {}
