kubernetes/taller_api-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: taller_api
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/taller_api: "true"
  podSelector:
    matchLabels:
      io.kompose.network/taller_api: "true"
